--- a/package.json
+++ b/package.json
@@ -8,5 +8,15 @@
   },
   "keywords": [],
   "author": "Wscnd (https://wscnd.me/)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^15.12.0",
+    "@types/react": "^17.0.9",
+    "@types/react-dom": "^17.0.6",
+    "typescript": "^4.3.2"
+  }
 }
