--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Wscnd (https://wscnd.me/)",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -23,7 +24,9 @@
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
     "html-webpack-plugin": "^5.3.1",
+    "style-loader": "^2.0.0",
     "typescript": "^4.3.2",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
