--- a/.babelrc
+++ b/.babelrc
@@ -3,10 +3,18 @@
         "@babel/preset-env",
         [
             "@babel/preset-react",
-        {
-            "runtime": "automatic"
-        }
+            {
+                "runtime": "automatic"
+            }
         ],
         "@babel/preset-typescript"
     ],
+    "plugins": [
+        [
+            "@babel/plugin-transform-runtime",
+            {
+                "regenerator": true
+            }
+        ]
+    ]
 }
