--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.1",
-    "husky": ">=6",
+    "husky": "^6.0.0",
     "lint-staged": ">=10",
     "prettier": "^2.3.0",
     "react-refresh": "^0.10.0",
